--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\qosmio\\Desktop\\mysql-connector-java-8.0.22.jar
+file.reference.mysql-connector-java-5.1.49.jar=E:\\inn\\mysql-connector-java-5.1.49\\mysql-connector-java-5.1.49.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +38,7 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-5.1.49.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -81,6 +81,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=InternetOdev_1.war
+war.name=InternetOdev_1_1.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
